# measure_face_ndk

./: build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: credit-card-2500s.param  nanodet-320-credit-opt.param
app/src/main/java/kr/semaphore/measureface/: BlazeFaceNcnn.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  blazefacencnn.cpp  carddetect.cpp  carddetect.h  face.cpp  face.h  landmark.cpp  landmark.h  ndkcamera.cpp  ndkcamera.h
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
